# pitcher-injury-analysis

./: .gitignore  README.md  cleanup_data.sh  create_team_mapping.py  fetch_current_teams.py  generate_blog_images.py  launch_dashboard.py  linkedin_post.md  linkedin_post_formatted.txt  organize_for_github.sh  pyproject.toml  regenerate_projections_accurate_teams.py  requirements.txt  requirements_scraping.txt  resize_header_image.py  setup.py  setup.sh
app/: README.md  pitcher_risk_app.py  requirements.txt
config/: config.yaml
mlb_pitcher_videos/: __init__.py  downloader.py  isolator.py  scraper.py
notebooks/: 01_data_acquisition.ipynb  01_getting_started.ipynb  02_scrape_statcast_data.ipynb  03_download_videos.ipynb  04_isolate_pitcher.ipynb  2024_holdout_validation.ipynb  2024_holdout_validation.py  bayesian_survival_analysis.ipynb  create_lagged_dataset.ipynb  eda_survival_analysis.ipynb  elbow_injury_analysis.ipynb  interaction_effects.ipynb  nonlinear_age_effects.ipynb  pitcher_risk_dashboard.ipynb
scripts/: correct_survival_dataset.py  debug_cindex_issue.py  diagnose_data_issues.py  diagnose_model_issues.py  download_videos.py  enhanced_injury_scraper.py  enhanced_integration.py  fix_concordance.py  fix_model_comparison.py  fix_nonlinear_age_notebook.py  fix_risk_scoring.py  fix_risk_scoring_v2.py  fix_spline_key_error.py  fix_weibull_model.py  full_pipeline.py  integrate_injury_data.py  isolate_pitcher.py  scrape_data.py  test_scraper.py  validate_2024_holdout.py
src/: data_acquisition.py  data_acquisition_v2.py  fangraphs_api_scraper.py  (+2 more)
(+2 files in other folders)
